--- a/webapp/view/POtable.view.xml
+++ b/webapp/view/POtable.view.xml
@@ -4,13 +4,15 @@
     xmlns:core="sap.ui.core"
     xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
     xmlns:smartTable="sap.ui.comp.smarttable"
+    xmlns:f="sap.f"
+    xmlns="sap.uxap"
+    xmlns:layout="sap.ui.layout"
     xmlns:customData="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
     xmlns:m="sap.m">
     <m:Page id="page" showHeader="false" enableScrolling="false">
         <smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="ZC_FuTorItem" showFilterConfiguration="false">
             <smartFilterBar:controlConfiguration>
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration1" key="BaseBtdId" label="{i18n>PurchaseOrderLabel}" visibleInAdvancedArea="true" />
-                <!-- <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration4" key="DesLocDescr" label="{i18n>PoDestinLoc}" visibleInAdvancedArea="true" /> -->
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration5" key="PkgId" label="{i18n>packageid}" visibleInAdvancedArea="true" />
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration3" key="PkgPickupDt" label="{i18n>PickUpLabel}" visibleInAdvancedArea="true" />
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration2" key="PkgSrcLoc" label="{i18n>POpickuplocation}" visibleInAdvancedArea="true">
@@ -24,23 +26,22 @@
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration7" key="PkgPcsVal" visible="false" />
                 <smartFilterBar:ControlConfiguration id="_IDGenControlConfiguration8" key="PkgPcsUni" visible="false" />
             </smartFilterBar:controlConfiguration>
-            <!-- layout data used to make the table growing but the filter bar fixed -->
             <smartFilterBar:layoutData>
                 <m:FlexItemData id="_IDGenFlexItemData1" shrinkFactor="0" />
             </smartFilterBar:layoutData>
         </smartFilterBar:SmartFilterBar>
-        <smartTable:SmartTable id="smartTable" tableType="Table" entitySet="ZC_FuTorItem" tableBindingPath="/ZC_FuTorItem" beforeRebindTable="onBeforeRebindTable" useTablePersonalisation="true" enableAutoBinding="true" showFullScreenButton="true" smartFilterId="smartFilterBar" header="{i18n>PurchaseOrderLabel}" showRowCount="true" persistencyKey="SmartTableRefApp_Explored" beforeExport="onBeforeExport" useVariantManagement="true" placeToolbarInTable="true" demandPopin="false" enableAutoColumnWidth="true" enableExport="true" ignoredFields="DesLoc,DesLocIdTrq,Length,Width,Height,Measuom" ignoreFromPersonalisation="DesLoc,DesLocIdTrq,Length,Width,Height,Measuom" requestAtLeastFields="DbKey,ParentKey,ReadOnly,BaseBtdId,TorId,ItemId,ProductId,ItemDescr,QuaPcsVal,QuaPcsUni,PkgQuaPcsVal,SrcLocDescr,PickupDt,DesLocDescr,DeliveryDt,PkgQuaPcsUni,PkgPcsVal,PkgPcsUni,PkgLength,PkgWidth,PkgHeight,PkgMeasuom,PkgWeiVal,PkgWeiUni,PkgId,PkgPickupDt,SrcLoc,SrcLocDescr,PkgSrcLoc,PkgReeferComply">
-            <!-- <smartTable:customToolbar>
+        <smartTable:SmartTable id="smartTable" tableType="Table" entitySet="ZC_FuTorItem" tableBindingPath="/ZC_FuTorItem" beforeRebindTable="onBeforeRebindTable" useTablePersonalisation="true" enableAutoBinding="true" showFullScreenButton="true" smartFilterId="smartFilterBar" header="{i18n>PurchaseOrderLabel}" showRowCount="true" persistencyKey="SmartTableRefApp_Explored" beforeExport="onBeforeExport" useVariantManagement="false" placeToolbarInTable="true" demandPopin="false" enableAutoColumnWidth="true" enableExport="true" ignoredFields="DesLoc,DesLocIdTrq,Length,Width,Height,Measuom" ignoreFromPersonalisation="DesLoc,DesLocIdTrq,Length,Width,Height,Measuom" requestAtLeastFields="DbKey,ParentKey,ReadOnly,BaseBtdId,TorId,ItemId,ProductId,ItemDescr,QuaPcsVal,QuaPcsUni,PkgQuaPcsVal,SrcLocDescr,PickupDt,DesLocDescr,DeliveryDt,PkgQuaPcsUni,PkgPcsVal,PkgPcsUni,PkgLength,PkgWidth,PkgHeight,PkgMeasuom,PkgWeiVal,PkgWeiUni,PkgId,PkgPickupDt,SrcLoc,SrcLocDescr,PkgSrcLoc,PkgReeferComply">
+            <smartTable:customToolbar>
                 <m:OverflowToolbar id="idToolbar" design="Transparent">
-                    <m:IconTabBar id="_IDGenIconTabBar">
+                    <!-- <m:IconTabBar id="_IDGenIconTabBar">
                         <m:items>
-                            <m:IconTabFilter id="_IDGenIconTabFilter" icon="sap-icon://begin" iconColor="Positive" text="Ok" />
+                            <m:IconTabFilter id="_IDGenIconTabFilter" icon="sap-icon://begin" iconColor="Positive"/>
                         </m:items>
-                    </m:IconTabBar>
+                    </m:IconTabBar> -->
                     <m:ToolbarSpacer id="idToolbarSpace" />
                     <m:OverflowToolbarButton id="idRefresh" icon="sap-icon://refresh" tooltip="Refresh" press="onRefresh" visible="true" />
                 </m:OverflowToolbar>
-            </smartTable:customToolbar> -->
+            </smartTable:customToolbar>
             <core:Fragment fragmentName="com.iherb.tm.ztmiherbpurchaseorders.fragment.tableExt" id="FragmentPOtable" type="XML" />
             <smartTable:layoutData>
                 <m:FlexItemData id="_IDGenFlexItemData2" growFactor="1" baseSize="0%" />
@@ -51,7 +52,7 @@
                 <m:content>
                     <m:ToolbarSpacer id="spacer1" />
                     <m:Button id="idPacktogether" text="Pack Item" type="Emphasized" press="onPackItmPress"/>
-                    <m:Button press="onSubmitPress" text="Submit" id="button4" type="Emphasized" />
+                    <m:Button press="onSubmitPress" text="Save" id="button4" type="Emphasized" />
                 </m:content>
             </m:Toolbar>
         </m:footer>
